https/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-mtool-deployment
spec:
  selector:
    matchLabels:
      app: nginx-mtool
  template:
    metadata:
      labels:
        app: nginx-mtool
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.0
          ports:
            - containerPort: 80
        - name: mtool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
