https/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-secret
spec:
  selector:
    app: nginx-mtool
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
